# animaltracker

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  rtsp_animal_monitoring_plan.md
config/: cameras.sample.yml
docs/: ARCHITECTURE_REFACTOR.md  CALENDAR_UI_PLAN.md
scripts/: quick_setup.sh  setup_jetson.sh  test_ptz_position.py  test_pushover.py
src/animaltracker/: __init__.py  camera_registry.py  cli.py  clip_buffer.py  config.py  detector.py  ebird.py  notification.py  onvif_client.py  pipeline.py  postprocess.py  ptz_calibration.py  ptz_tracker.py  ptz_visual_calibration.py  species_names.py  storage.py  tracker.py  web.py
src/animaltracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
systemd/: animaltracker-logrotate  animaltracker.service  detector@.service  ssd-cleaner.service  ssd-cleaner.timer
systemd/animaltracker.service.d/: memory.conf
